create & validate client
