# api/gen/docs/openapi.yaml
@@ -6,6 +6,31 @@ info:
     title: ""
     version: 0.0.1
 paths:
+    /client/client/create:
+        post:
+            tags:
+                - ClientService
+            description: Create creates a new client.
+            operationId: ClientService_Create
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /identity/role:
         post:
             tags:
@@ -375,6 +400,32 @@ components:
                     format: uint32
                 message:
                     type: string
+        CreateRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                secret:
+                    type: string
+                redirectUri:
+                    type: string
+                scopes:
+                    type: array
+                    items:
+                        type: integer
+                        format: uint32
+                base:
+                    $ref: '#/components/schemas/Base'
+        CreateResponse:
+            type: object
+            properties:
+                clientId:
+                    type: integer
+                    format: uint32
+                baseResp:
+                    $ref: '#/components/schemas/BaseResp'
         CreateRoleRequest:
             type: object
             properties:
@@ -606,5 +657,6 @@ components:
                 updatedAt:
                     type: string
 tags:
+    - name: ClientService
     - name: RoleService
     - name: UserService
